# pybind11_examples

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
classes/: CMakeLists.txt  package.xml
classes/include/classes/: cat.h  dog.h
classes/scripts/: pets.py
classes/src/: cat.cpp  dog.cpp
cpp_object_attr/: CMakeLists.txt  package.xml  setup.py
cpp_object_attr/src/: cpp_object.cpp  example.cpp  main.cpp
cpp_object_attr/src/cpp_object_attr/: type_printer.py
function_call/: CMakeLists.txt  package.xml
function_call/scripts/: hello_world.py
function_call/src/: logger.cpp
inheritance/: CMakeLists.txt  package.xml
inheritance/include/inheritance/: pet.h
inheritance/scripts/: dog.py
inheritance/src/: pet.cpp
plugin/: CMakeLists.txt  package.xml  setup.py
plugin/include/plugin/: base_plugin.h  plugin_runner.h  plugin_wrapper.h
plugin/src/: base_plugin.cpp  plugin_runner.cpp  plugin_wrapper.cpp  py_base_plugin.cpp
plugin/src/plugin/: custom_plugin.py
scripts/: hello_world.py
src/: example.cpp
